fix GioEdge and writing it